--- a/FawMobileClient/codenameone_settings.properties
+++ b/FawMobileClient/codenameone_settings.properties
@@ -19,4 +19,4 @@ codename1.android.keystore=
 codename1.android.keystoreAlias=
 codename1.rim.certificatePassword=
 codename1.ios.provision=
-codename1.packageName=com.fallarmywormproj.mobile.clients
+codename1.packageName=bj.armyworm.mobile.view
